Got wilxon tests to work for java